# generator_struct_from_jsonschema

./: Cargo.toml
crates/generator/: Cargo.toml
crates/generator/examples/: generate.rs
crates/generator/src/: lib.rs
crates/json_schema/: Cargo.toml
crates/json_schema/examples/: schema.rs
crates/json_schema/fixtures/: person.json
crates/json_schema/src/: lib.rs
crates/json_schema/templates/: generator.j2
examples/: generate.rs
fixtures/: person.json
src/: lib.rs
