[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
serde_json = "1.0"
anyhow = "1"
litrs = "0.2.3"
json_schema = {path = "../json_schema"}


[lib]
# macro_lib = true
proc_macro = true
